# care-buddy

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_WIKI.md  DESIGN.md  PRODUCT.md  README.md  checkcss.mjs  components.json  index.html  package-lock.json  package.json  skills-lock.json  tsconfig.json  vite.config.ts  vitest.config.ts
.codebuddy/plans/: PackageHero_套餐包区域重构___Chip_居中___选中_morph_主卡___右侧次_chip_堆叠_a92c678c(未完成).md  PackageHero_套餐包区域重构___Chip_居中___选中_morph_主卡___右侧次_chip_堆叠_v4_标题居中_位于_chip_行上方__4c9cca77.md  PackageHero_套餐包区域重构___三层视觉___主次套餐切换_ee361fc6(未完成).md  PackageHero_套餐包区域重构___三层视觉___主次套餐切换_v2_文字云用并集__58d81f41(未完成).md  PackageHero_对齐_6_列网格系统_left-aligned__64_12_24__含_FF0000_调试背景__ed30ff8e.md  PackageHero_左右分区布局_ef62dcd0(未完成).md  回滚_PackageHero_网格瞎改_恢复全屏居中层叠_537d46bc(未完成).md  文字云调整至图片后方_28958d72(未完成).md
.github/workflows/: ci.yml
scripts/: clean-data.ps1  version.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
src/components/: CapsuleShell.tsx  CircularProgress.tsx  CountdownSection.tsx  Dashboard.tsx  EntertainmentPreview.tsx  ErrorBoundary.tsx  ExerciseLibrary.tsx  ExercisePanel.tsx  ExerciseTagCloud.tsx  FloatingPreview.tsx  GridDebug.tsx  HealthMetricsSection.tsx  Icons.tsx  LockScreenSlave.tsx  PackageBackdrop.tsx  PackageChip.tsx  PackageHero.tsx  QuickActions.tsx  Settings.tsx  Sidebar.tsx  StatsDashboard.tsx  SuffixedNumberField.tsx  TimerCards.tsx  TimerCarousel.tsx  TodayStats.tsx  TodayStatsSection.tsx  WindowControls.tsx  index.ts
(+73 files in other folders)
