[package]
name = "care-buddy"
version = "1.7.0"
description = "健康提醒助手 - 久坐、喝水、护眼提醒"
authors = ["you"]
edition = "2021"

[lib]
name = "care_buddy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
url = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-dialog = "2"
chrono = "0.4"
rodio = "0.21.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_RemoteDesktop", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_SystemInformation"] }
